Localize start screens

--- a/locales/en.json
+++ b/locales/en.json
@@ -4,10 +4,14 @@
   "Enter Master Password": "Enter Master Password",
   "Change Master Password": "Change Master Password",
   "Current Password": "Current Password",
+  "Set Master Password": "Set Master Password",
   "New Password": "New Password",
   "Repeat New Password": "Repeat New Password",
+  "Confirm Master Password": "Confirm Master Password",
   "Incorrect Master Password": "Incorrect Master Password",
   "Current password is invalid": "Current password is invalid",
+  "Passwords do not match": "Passwords do not match",
+  "Fill in the password": "Fill in the password",
   "Open Swifty": "Open Swifty",
   "Lock Screen": "Lock Screen",
   "About": "About",
