--- a/locales/ru.json
+++ b/locales/ru.json
@@ -4,10 +4,14 @@
   "Enter Master Password": "Введите Мастер Пароль",
   "Change Master Password": "Изменить Мастер Пароль",
   "Current Password": "Текущий Пароль",
+  "Set Master Password": "Set Master Password",
   "New Password": "Новый Пароль",
   "Repeat New Password": "Повторить Новый Пароль",
+  "Confirm Master Password": "Confirm Master Password",
   "Incorrect Master Password": "Incorrect Master Password",
   "Current password is invalid": "Current password is invalid",
+  "Passwords do not match": "Passwords do not match",
+  "Fill in the password": "Fill in the password",
   "Open Swifty": "Open Swifty",
   "Lock Screen": "Lock Screen",
   "About": "About",
