--- a/locales/en.json
+++ b/locales/en.json
@@ -11,6 +11,7 @@
   "Incorrect Master Password": "Incorrect Master Password",
   "Current password is invalid": "Current password is invalid",
   "Passwords do not match": "Passwords do not match",
+  "Successfully changed password": "Successfully changed password",
   "Fill in the password": "Fill in the password",
   "Open Swifty": "Open Swifty",
   "Lock Screen": "Lock Screen",
@@ -50,6 +51,8 @@
   "Go Back": "Go Back",
   "Finish": "Finish",
   "Update": "Update",
+  "Save": "Save",
+  "Cancel": "Cancel",
   "Logins": "Logins",
   "Settings": "Settings",
   "Secure Notes": "Secure Notes",
