--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,89 +1,92 @@
 {
-  "Keep your passwords safe and organized": "Keep your passwords safe and organized",
+  "Keep your passwords safe and organized": "Держите свои пароли огранизованно и в безопасности",
   "Master Password": "Мастер Пароль",
   "Enter Master Password": "Введите Мастер Пароль",
   "Change Master Password": "Изменить Мастер Пароль",
   "Current Password": "Текущий Пароль",
-  "Set Master Password": "Set Master Password",
+  "Set Master Password": "Задать Мастер Пароль",
   "New Password": "Новый Пароль",
   "Repeat New Password": "Повторить Новый Пароль",
-  "Confirm Master Password": "Confirm Master Password",
-  "Incorrect Master Password": "Incorrect Master Password",
-  "Current password is invalid": "Current password is invalid",
-  "Passwords do not match": "Passwords do not match",
-  "Fill in the password": "Fill in the password",
-  "Open Swifty": "Open Swifty",
-  "Lock Screen": "Lock Screen",
-  "About": "About",
-  "Quit": "Quit",
-  "Vault Settings": "Vault Settings",
-  "Synchronize": "Synchronize",
-  "Backup": "Backup",
-  "Remote vault file is invalid": "Remote vault file is invalid",
-  "Swifty folder was not found on GDrive": "Swifty folder was not found on GDrive",
-  "Vault file was not found on GDrive": "Vault file was not found on GDrive",
-  "Failed to create Swifty folder on GDrive": "Failed to create Swifty folder on GDrive",
-  "Failed to create vault file on GDrive": "Failed to create vault file on GDrive",
-  "Save Vault File": "Save Vault File",
-  "Synchronize your vault with Google Drive": "Synchronize your vault with Google Drive",
-  "Allows you to save a backup of your default vault file": "Allows you to save a backup of your default vault file",
-  "Connect your Google Drive": "Connect your Google Drive",
-  "Disconnect Google Drive": "Disconnect Google Drive",
-  "Password Settings": "Password Settings",
-  "Password Generation": "Password Generation",
-  "Example": "Example",
-  "Length": "Length",
-  "Symbols": "Symbols",
-  "Numbers": "Numbers",
-  "Special characters": "Special characters",
-  "Uppercase": "Uppercase",
-  "I am a new User": "I am a new User",
-  "I am existing User": "I am existing User",
-  "Setup Master Password": "Setup Master Password",
-  "Account Setup": "Account Setup",
-  "Restore Backup": "Restore Backup",
-  "Setup Instructions": "You need to set a Master Password to use Swifty. \n This is the only password you have to remember. Make sure you never forget it.",
-  "Restore Instructions": "If you've been using Swifty before you can restore your data from backup file. Your Master Password will be required for this.",
-  "Invalid password for backup": "Invalid password for backup",
-  "Choose backup File": "Choose backup File",
-  "Continue": "Continue",
-  "Go Back": "Go Back",
-  "Finish": "Finish",
-  "Update": "Update",
-  "Logins": "Logins",
-  "Settings": "Settings",
-  "Secure Notes": "Secure Notes",
-  "Credit Cards": "Credit Cards",
-  "Password Audit": "Password Audit",
-  "Search": "Search",
-  "Tags": "Tags",
-  "Start tagging": "Start tagging your entries to filter them by tags.",
-  "No Items": "No Items",
-  "Loading Results..": "Loading Results..",
-  "Duplicates": "Duplicates",
-  "Old": "Old",
-  "Too Short": "Short",
-  "Weak": "Weak",
-  "More than 6 month old": "More than 6 month old",
-  "Overall Score": "Overall Score",
-  "Create First Entry": "Create First Entry",
-  "Import from Gdrive": "Import from Gdrive",
-  "Copied to Clipboard": "Copied to Clipboard",
-  "Title": "Title",
-  "Number": "Number",
-  "Month": "Month",
-  "Year": "Year",
+  "Confirm Master Password": "Подтвердить Мастер Пароль",
+  "Incorrect Master Password": "Неверный Мастер Пароль",
+  "Current password is invalid": "Неверный текущий пароль",
+  "Passwords do not match": "Пароли не совпадают",
+  "Successfully changed password": "Пароль успешно изменен",
+  "Fill in the password": "Введите пароль",
+  "Open Swifty": "Открыть Swifty",
+  "Lock Screen": "Заблокировать окно",
+  "About": "О программе",
+  "Quit": "Закрыть",
+  "Vault Settings": "Настройки хранилища",
+  "Synchronize": "Синхронизировать",
+  "Backup": "Бэкап",
+  "Remote vault file is invalid": "Неверный удленный файл хранилища",
+  "Swifty folder was not found on GDrive": "Папка Swifty не найдена в Google Drive",
+  "Vault file was not found on GDrive": "Файл хранилища не найден в Google Drive",
+  "Failed to create Swifty folder on GDrive": "Не удалось создать папку Swifty в Google Drive",
+  "Failed to create vault file on GDrive": "Не удалось создать файл хранилища в Google Drive",
+  "Save Vault File": "Сохранить Файл Данных",
+  "Synchronize your vault with Google Drive": "Синхронизировать хранилище с Google Drive",
+  "Allows you to save a backup of your default vault file": "Позволяет сохранить бэкап вашего файла хранилища",
+  "Connect your Google Drive": "Подключить Google Drive",
+  "Disconnect Google Drive": "Отключить Google Drive",
+  "Password Settings": "Настройки пароля",
+  "Password Generation": "Генерирование Пароля",
+  "Example": "Пример",
+  "Length": "Длинна",
+  "Symbols": "Символы",
+  "Numbers": "Числа",
+  "Special characters": "Специальные символы",
+  "Uppercase": "Верхний регистр",
+  "I am a new User": "Я новый пользователь",
+  "I am existing User": "Я уже использовал Swifty",
+  "Setup Master Password": "Задать Мастер Пароль",
+  "Account Setup": "Создать Аккаунт",
+  "Restore Backup": "Восстановить Бэкап",
+  "Setup Instructions": "Вам необходимо задать Мастер Пароль чтобы использовать Swifty. \n Это едиственный пароль, который вам нужно помнить. Не потеряйте его.",
+  "Restore Instructions": "Если вы использовали Swifty раньше, вы можете восстановить данные из файла бэкапа. Для этого потребуется Мастер Пароль.",
+  "Invalid password for backup": "Неверный пароль бэкапа",
+  "Choose backup File": "Выберите файл бэкапа",
+  "Continue": "Продолжить",
+  "Go Back": "Назад",
+  "Finish": "Закончить",
+  "Update": "Сохранить",
+  "Save": "Сохранить",
+  "Cancel": "Отменить",
+  "Logins": "Логины",
+  "Settings": "Настройки",
+  "Secure Notes": "Безопасные Заметки",
+  "Credit Cards": "Платежные Карты",
+  "Password Audit": "Аудит Паролей",
+  "Search": "Поиск",
+  "Tags": "Теги",
+  "Start tagging": "Начните использовать теги в записях, чтобы фильтровать по тегам.",
+  "No Items": "Нет записей",
+  "Loading Results..": "Загрузка результатов..",
+  "Duplicates": "Повторяющийся",
+  "Old": "Старый",
+  "Too Short": "Короткий",
+  "Weak": "Слабый",
+  "More than 6 month old": "Старше чем 6 месяцев",
+  "Overall Score": "Общий Рейтинг",
+  "Create First Entry": "Создать первую запись",
+  "Import from Gdrive": "Импортировать из Gdrive",
+  "Copied to Clipboard": "Скопировано в буфер",
+  "Title": "Название",
+  "Number": "Номер",
+  "Month": "Месяц",
+  "Year": "Год",
   "CVC": "CVC",
   "Pin": "Pin",
   "OTP": "OTP",
-  "Name": "Name",
-  "Username": "Username",
-  "Password": "Password",
+  "Name": "Имя",
+  "Username": "Логин",
+  "Password": "Пароль",
   "Email": "Email",
-  "Note": "Note",
-  "Last Modified": "Last Modified",
-  "Created": "Last Modified",
-  "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
-  "Confirm your identity": "Confirm your identity",
-  "or": "or"
+  "Note": "Заметка",
+  "Last Modified": "Обновлено",
+  "Created": "Создано",
+  "Are you sure you want to delete this item?": "Вы уверены что хотите удалить эту запись?",
+  "Confirm your identity": "Подтвердите свою личность",
+  "or": "или"
 }
