--- a/locales/en.json
+++ b/locales/en.json
@@ -65,7 +65,7 @@
   "Loading Results..": "Loading Results..",
   "Duplicates": "Duplicates",
   "Old": "Old",
-  "Too Short": "Short",
+  "Too Short": "Too Short",
   "Weak": "Weak",
   "More than 6 month old": "More than 6 month old",
   "Overall Score": "Overall Score",
