style: Resolve semantic repetition

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -86,7 +86,7 @@
     "Note": "笔记",
     "Last Modified": "上次修改",
     "Created": "创建",
-    "Are you sure you want to delete this item?": "你确定你想要删除此项目？",
+    "Are you sure you want to delete this item?": "你确定想要删除此项目？",
     "Confirm your identity": "确认你的身份",
     "or": "或"
   }
