Add language translation

--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -88,5 +88,6 @@
   "Created": "Создано",
   "Are you sure you want to delete this item?": "Вы уверены что хотите удалить эту запись?",
   "Confirm your identity": "Подтвердите свою личность",
-  "or": "или"
+  "or": "или",
+  "Language": "Язык интерфейса"
 }
