--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -88,5 +88,6 @@
   "Created": "Last Modified",
   "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
   "Confirm your identity": "Confirm your identity",
-  "or": "or"
+  "or": "or",
+  "Language": "Language"
 }
