--- a/locales/tr-TR.json
+++ b/locales/tr-TR.json
@@ -88,5 +88,6 @@
   "Created": "Oluşturuldu",
   "Are you sure you want to delete this item?": "Bu öğeyi silmek istediğinizden emin misiniz?",
   "Confirm your identity": "Kimliğinizi onaylayın",
-  "or": "veya"
+  "or": "veya",
+  "Language": "Arayüz dili"
 }
