--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -88,6 +88,7 @@
     "Created": "创建",
     "Are you sure you want to delete this item?": "你确定想要删除此项目？",
     "Confirm your identity": "确认你的身份",
-    "or": "或"
+    "or": "或",
+    "Language": "界面语言"
   }
-  
+
