TR translation fix and additions
There were some wrong translations and non-translated parts, I did my best to correct mistakes and translate rest of it. Thx for the app.

--- a/locales/tr-TR.json
+++ b/locales/tr-TR.json
@@ -11,7 +11,7 @@
   "Incorrect Master Password": "Yanlış Ana Şifre",
   "Current password is invalid": "Mevcut şifre geçersiz",
   "Passwords do not match": "Şifreler eşleşmiyor",
-  "Successfully changed password": "Successfully changed password",
+  "Successfully changed password": "Şifre başarıyla değiştirildi",
   "Fill in the password": "Şifreyi doldurun",
   "Open Swifty": "Swifty'yi Açın",
   "Lock Screen": "Kilit Ekranı",
@@ -20,16 +20,16 @@
   "Vault Settings": "Kasa Ayarları",
   "Synchronize": "Senkronize et",
   "Backup": "Yedekleme",
-  "Remote vault file is invalid": "Remote vault file is invalid",
-  "Swifty folder was not found on GDrive": "Swifty folder was not found on GDrive",
-  "Vault file was not found on GDrive": "Vault file was not found on GDrive",
-  "Failed to create Swifty folder on GDrive": "Failed to create Swifty folder on GDrive",
-  "Failed to create vault file on GDrive": "Failed to create vault file on GDrive",
+  "Remote vault file is invalid": "Uzak kasa dosyası geçersiz",
+  "Swifty folder was not found on GDrive": "Swifty klasörü GDrive'da bulunamadı",
+  "Vault file was not found on GDrive": "Kasa dosyası GDrive'da bulunamadı",
+  "Failed to create Swifty folder on GDrive": "Swifty klasörü GDrive'da oluşturulamadı",
+  "Failed to create vault file on GDrive": "Kasa dosyası GDrive'da oluşturulamadı",
   "Save Vault File": "Kasa Dosyasını Kaydet",
-  "Synchronize your vault with Google Drive": "Synchronize your vault with Google Drive",
+  "Synchronize your vault with Google Drive": "Kasa dosyasını GDrive ile senkronize et",
   "Allows you to save a backup of your default vault file": "Varsayılan kasa dosyanızın bir yedeğini kaydetmenize olanak sağlar",
-  "Connect your Google Drive": "Connect your Google Drive",
-  "Disconnect Google Drive": "Disconnect Google Drive",
+  "Connect your Google Drive": "Google Drive'ınıza bağlanın",
+  "Disconnect Google Drive": "Google Drive'ınızın bağlantısını kesin",
   "Password Settings": "Şifre Ayarları",
   "Password Generation": "Şifre Oluşturma",
   "Example": "Örnek",
@@ -43,10 +43,10 @@
   "Setup Master Password": "Kurulum Ana Şifresi",
   "Account Setup": "Hesap Kurulumu",
   "Restore Backup": "Yedeği Geri Yükle",
-  "Setup Instructions": "Şifreler tek bir şifreleme ile tutulduğu için mevcut şifre yerine yeni şifre tanımlaması yapılacaktır. \nŞifreyi not almayı unutmayın.",
-  "Restore Instructions": "Daha önce Swifty kullanıyorsanız, verilerinizi yedekleme dosyasından geri yükleyebilirsiniz. Bunun için Ana Şifreniz gerekli olacaktır.",
+  "Setup Instructions": "Swifty'i kullanmak için ana şifre oluşturmanız lazım. \n Bu aklınızda tutmanız gereken tek şifre. Şifreyi not almayı unutmayın.",
+  "Restore Instructions": "Daha önce Swifty kullandıysanız, verilerinizi yedekleme dosyasından geri yükleyebilirsiniz. Bunun için Ana Şifreniz gerekli olacaktır.",
   "Invalid password for backup": "Yedekleme için geçersiz şifre",
-  "Choose backup File": "Yedek dosyayı seçin",
+  "Choose backup File": "Yedek dosyasını seçin",
   "Continue": "Devam Et",
   "Go Back": "Geri Git",
   "Finish": "Bitti",
@@ -61,16 +61,16 @@
   "Search": "Arama",
   "Tags": "Etiketler",
   "Start tagging": "Girişlerinizi etiketlere göre filtrelemek için etiketlemeye başlayın.",
-  "No Items": "Öğe Yok",
+  "No Items": "Öge Yok",
   "Loading Results..": "Sonuçlar Yükleniyor..",
-  "Duplicates": "Duplicates",
+  "Duplicates": "Kopyalar",
   "Old": "Eski",
   "Too Short": "Çok Kısa",
   "Weak": "Zayıf",
   "More than 6 month old": "6 aydan daha eski",
   "Overall Score": "Genel Puan",
-  "Create First Entry": "Create First Entry",
-  "Import from Gdrive": "Import from Gdrive",
+  "Create First Entry": "İlk girdiyi oluşturun",
+  "Import from Gdrive": "Gdrive'dan içeriye aktar",
   "Copied to Clipboard": "Panoya kopyalandı",
   "Title": "Başlık",
   "Number": "Numara",
@@ -86,7 +86,7 @@
   "Note": "Not",
   "Last Modified": "Son Değişiklik",
   "Created": "Oluşturuldu",
-  "Are you sure you want to delete this item?": "Bu öğeyi silmek istediğinizden emin misiniz?",
+  "Are you sure you want to delete this item?": "Bu ögeyi silmek istediğinizden emin misiniz?",
   "Confirm your identity": "Kimliğinizi onaylayın",
   "or": "veya",
   "Language": "Arayüz dili"
