--- a/locales/sv-SE.json
+++ b/locales/sv-SE.json
@@ -7,65 +7,65 @@
   "Set Master Password": "Ange huvudlösenord",
   "New Password": "Nytt lösenord",
   "Repeat New Password": "Upprepa nytt lösenord",
-  "Confirm Master Password": "Confirm Master Password",
-  "Incorrect Master Password": "Incorrect Master Password",
-  "Current password is invalid": "Current password is invalid",
-  "Passwords do not match": "Passwords do not match",
-  "Successfully changed password": "Successfully changed password",
-  "Fill in the password": "Fill in the password",
-  "Open Swifty": "Open Swifty",
-  "Lock Screen": "Lock Screen",
-  "About": "About",
-  "Quit": "Quit",
-  "Vault Settings": "Vault Settings",
-  "Synchronize": "Synchronize",
-  "Backup": "Backup",
-  "Remote vault file is invalid": "Remote vault file is invalid",
-  "Swifty folder was not found on GDrive": "Swifty folder was not found on GDrive",
-  "Vault file was not found on GDrive": "Vault file was not found on GDrive",
-  "Failed to create Swifty folder on GDrive": "Failed to create Swifty folder on GDrive",
-  "Failed to create vault file on GDrive": "Failed to create vault file on GDrive",
-  "Save Vault File": "Save Vault File",
-  "Synchronize your vault with Google Drive": "Synchronize your vault with Google Drive",
-  "Allows you to save a backup of your default vault file": "Allows you to save a backup of your default vault file",
-  "Connect your Google Drive": "Connect your Google Drive",
-  "Disconnect Google Drive": "Disconnect Google Drive",
-  "Password Settings": "Password Settings",
-  "Password Generation": "Password Generation",
-  "Example": "Example",
-  "Length": "Length",
-  "Symbols": "Symbols",
-  "Numbers": "Numbers",
-  "Special characters": "Special characters",
-  "Uppercase": "Uppercase",
-  "I am a new User": "I am a new User",
-  "I am existing User": "I am existing User",
-  "Setup Master Password": "Setup Master Password",
-  "Account Setup": "Account Setup",
-  "Restore Backup": "Restore Backup",
-  "Setup Instructions": "You need to set a Master Password to use Swifty. \n This is the only password you have to remember. Make sure you never forget it.",
-  "Restore Instructions": "If you've been using Swifty before you can restore your data from backup file. Your Master Password will be required for this.",
-  "Invalid password for backup": "Invalid password for backup",
-  "Choose backup File": "Choose backup File",
-  "Continue": "Continue",
-  "Go Back": "Go Back",
-  "Finish": "Finish",
-  "Update": "Update",
-  "Save": "Save",
-  "Cancel": "Cancel",
-  "Logins": "Logins",
-  "Settings": "Settings",
-  "Secure Notes": "Secure Notes",
-  "Credit Cards": "Credit Cards",
-  "Password Audit": "Password Audit",
-  "Search": "Search",
-  "Tags": "Tags",
-  "Start tagging": "Start tagging your entries to filter them by tags.",
-  "No Items": "No Items",
-  "Loading Results..": "Loading Results..",
-  "Duplicates": "Duplicates",
-  "Old": "Old",
-  "Too Short": "Too Short",
+  "Confirm Master Password": "Bekräfta huvudlösenord",
+  "Incorrect Master Password": "Felaktigt huvudlösenord",
+  "Current password is invalid": "Det aktuella lösenordet är ogiltigt",
+  "Passwords do not match": "Lösenord matchar inte",
+  "Successfully changed password": "Lösenord har ändrats",
+  "Fill in the password": "Fyll i lösenordet",
+  "Open Swifty": "Öppna Swifty",
+  "Lock Screen": "Låsskärm",
+  "About": "Om",
+  "Quit": "Avsluta",
+  "Vault Settings": "Inställningar för valv",
+  "Synchronize": "Synkronisera",
+  "Backup": "Säkerhetskopiera",
+  "Remote vault file is invalid": "Fjärrvalvfilen är ogiltig",
+  "Swifty folder was not found on GDrive": "Swifty-mappen hittades inte på GDrive",
+  "Vault file was not found on GDrive": "Det gick inte att hitta valvfilen på GDrive",
+  "Failed to create Swifty folder on GDrive": "Det gick inte att skapa Swifty-mappen på GDrive",
+  "Failed to create vault file on GDrive": "Det gick inte att skapa valvfil på GDrive",
+  "Save Vault File": "Spara Valvfil",
+  "Synchronize your vault with Google Drive": "Synkronisera valvet med Google Drive",
+  "Allows you to save a backup of your default vault file": "Gör att du kan spara en säkerhetskopia av standardvalvfilen",
+  "Connect your Google Drive": "Koppla din Google Drive",
+  "Disconnect Google Drive": "Koppla Från Google Drive",
+  "Password Settings": "Lösenords inställningar",
+  "Password Generation": "Generering av lösenord",
+  "Example": "Exempel",
+  "Length": "Längd",
+  "Symbols": "Symboler",
+  "Numbers": "Nummer",
+  "Special characters": "Specialtecken",
+  "Uppercase": "Versal",
+  "I am a new User": "Jag är en ny användre",
+  "I am existing User": "Jag är befintlig användare",
+  "Setup Master Password": "Konfigurera huvudlösenord",
+  "Account Setup": "Konfigurera konto",
+  "Restore Backup": "Återställ säkerhetskopiering",
+  "Setup Instructions": "Du måste ange ett huvudlösenord för att använda Swifty. \n Detta är det enda lösenord du behöver komma ihåg. Se till att du aldrig glömmer det.",
+  "Restore Instructions": "Om du har använt Swifty tidigare kan du återställa dina data från säkerhetskopian. Ditt huvudlösenord krävs för detta.",
+  "Invalid password for backup": "Ogiltigt lösenord för säkerhetskopiering",
+  "Choose backup File": "Välj säkerhetskopieringsfil",
+  "Continue": "Fortsätt",
+  "Go Back": "Tilbaka",
+  "Finish": "Avsluta",
+  "Update": "Updatera",
+  "Save": "Spara",
+  "Cancel": "Avbryt",
+  "Logins": "Inloggningar",
+  "Settings": "Inställningar",
+  "Secure Notes": "Säkra anteckningar",
+  "Credit Cards": "Credit Kort",
+  "Password Audit": "Granskning av lösenord",
+  "Search": "Sök",
+  "Tags": "Taggar",
+  "Start tagging": "Börja tagga dina saker för att filtrera dem efter taggar.",
+  "No Items": "Inga Saker",
+  "Loading Results..": "Laddar Resultat..",
+  "Duplicates": "Dubbletter",
+  "Old": "Gammalt",
+  "Too Short": "För Kort",
   "Weak": "Weak",
   "More than 6 month old": "More than 6 month old",
   "Overall Score": "Overall Score",
