--- a/locales/sv-SE.json
+++ b/locales/sv-SE.json
@@ -66,28 +66,28 @@
   "Duplicates": "Dubbletter",
   "Old": "Gammalt",
   "Too Short": "För Kort",
-  "Weak": "Weak",
-  "More than 6 month old": "More than 6 month old",
-  "Overall Score": "Overall Score",
-  "Create First Entry": "Create First Entry",
-  "Import from Gdrive": "Import from Gdrive",
-  "Copied to Clipboard": "Copied to Clipboard",
-  "Title": "Title",
-  "Number": "Number",
-  "Month": "Month",
-  "Year": "Year",
+  "Weak": "Svagt",
+  "More than 6 month old": "Mer än 6 månader gammal",
+  "Overall Score": "Totalpoäng",
+  "Create First Entry": "Skapa första saken",
+  "Import from Gdrive": "Importera från Gdrive",
+  "Copied to Clipboard": "Kopierad Till Urklipp",
+  "Title": "Titel",
+  "Number": "Nummer",
+  "Month": "Månad",
+  "Year": "År",
   "CVC": "CVC",
   "Pin": "Pin",
   "OTP": "OTP",
-  "Name": "Name",
-  "Username": "Username",
-  "Password": "Password",
+  "Name": "Namn",
+  "Username": "Användarnamn",
+  "Password": "Lösenord",
   "Email": "Email",
-  "Note": "Note",
-  "Last Modified": "Last Modified",
-  "Created": "Last Modified",
-  "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
-  "Confirm your identity": "Confirm your identity",
-  "or": "or",
-  "Language": "Language"
+  "Note": "Anteckning",
+  "Last Modified": "Senast ändrad",
+  "Created": "Skapad",
+  "Are you sure you want to delete this item?": "Vill du ta bort det här objektet?",
+  "Confirm your identity": "Bekräfta din identitet",
+  "or": "eller",
+  "Language": "Språk"
 }
