--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -1,13 +1,13 @@
 {
-    "Keep your passwords safe and organized": "Speichere deine Passwörter sicher und halte sie organisiert",
+    "Keep your passwords safe and organized": "Speichern Sie ihre Passwörter sicher und organisieren ihre Passwörter nach ihren Interessen",
     "Master Password": "Hauptpasswort",
-    "Enter Master Password": "Gebe das Hauptpasswort ein",
-    "Change Master Password": "ändere das Hauptpasswort",
+    "Enter Master Password": "Geben Sie das Hauptpasswort ein",
+    "Change Master Password": "Ändern Sie das Hauptpasswort",
     "Current Password": "Jetziges Passwort",
     "Set Master Password": "Hauptpasswort festlegen",
     "New Password": "Neues Passwort",
-    "Repeat New Password": "Wiederhole das neue Passwort",
-    "Confirm Master Password": "Bestätige Hauptpasswort",
+    "Repeat New Password": "Wiederholen Sie das neue Passwort",
+    "Confirm Master Password": "Bestätigen des Hauptpasswort",
     "Incorrect Master Password": "Falsches Hauptpasswort",
     "Current password is invalid": "Jetziges Passwort ist ungültig",
     "Passwords do not match": "Passwort stimmt nicht überein",
@@ -26,10 +26,10 @@
     "Failed to create Swifty folder on GDrive": "Bei der Erstellung des Swifty Ordners auf GDrive ist ein Fehler aufgetreten",
     "Failed to create vault file on GDrive": "Bei der Erstellung der Tresor Datei auf GDrive ist ein Fehler aufgetreten",
     "Save Vault File": "Tresor Datei speichern",
-    "Synchronize your vault with Google Drive": "Synchronisiere deinen Tresor mit Google Drive",
-    "Allows you to save a backup of your default vault file": "Erlaubt es dir, eine Sicherungsdatei deiner Standart Tresor Datei anzulegen",
-    "Connect your Google Drive": "Verbinde dein Google Drive",
-    "Disconnect Google Drive": "Trenne dein Google Drive",
+    "Synchronize your vault with Google Drive": "Synchronisieren Sie den Tresor mit Google Drive",
+    "Allows you to save a backup of your default vault file": "Erlaubt es ihnen, eine Sicherungsdatei ihrer Standart Tresor Datei anzulegen",
+    "Connect your Google Drive": "Verbinden Sie ihr Google Drive",
+    "Disconnect Google Drive": "Trennen Sie ihr Google Drive",
     "Password Settings": "Passwort Einstellungen",
     "Password Generation": "Passwort Generation",
     "Example": "Beispiel",
@@ -44,9 +44,9 @@
     "Account Setup": "Konto einrichten",
     "Restore Backup": "Sicherungsdatei wiederherstellen",
     "Setup Instructions": "Um Swifty nutzen zu können müssen Sie ein Hauptpasswort festlegen. \n Das ist das einzigste Passwort was Sie sich merken müssen. Bitte gehen Sie sicher dass Sie es nicht vergessen.",
-    "Restore Instructions": "Wenn Sie Swifty schon einmal benutzt haben, können Sie Ihre Daten aus einer Sicherungsdatei wiederherstellen. Dein Hauptpasswort wird dafür benötigt.",
+    "Restore Instructions": "Wenn Sie Swifty schon einmal benutzt haben, können Sie Ihre Daten aus einer Sicherungsdatei wiederherstellen. Ihr Hauptpasswort wird dafür benötigt.",
     "Invalid password for backup": "Falsches Passwort für Sicherungsdatei",
-    "Choose backup File": "Wähle eine Sicherungsdatei",
+    "Choose backup File": "Wählen Sie eine Sicherungsdatei",
     "Continue": "Fortfahren",
     "Go Back": "Gehe zurück",
     "Finish": "Fertig",
