Add ukrainian language

--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -84,6 +84,7 @@
     "Password": "Passwort",
     "Email": "E-Mail",
     "Note": "Notiz",
+    "Website": "URL",
     "Last Modified": "Zuletzt bearbeitet",
     "Created": "Zuletzt bearbeitet",
     "Are you sure you want to delete this item?": "Sind Sie sicher, dass sie diesen Eintrag löschen wollen?",
