--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -84,6 +84,7 @@
   "Password": "Mot de passe",
   "Email": "Email",
   "Note": "Note",
+  "Website": "URL",
   "Last Modified": "Dernière modification",
   "Created": "Dernière modification",
   "Are you sure you want to delete this item?": "Êtes-vous sûr de vouloir supprimer cet élément?",
