--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -84,6 +84,7 @@
 	"Password": "Senha",
 	"Email": "Email",
 	"Note": "Nota",
+	"Website": "URL",
 	"Last Modified": "Modificado em",
 	"Created": "Criado em",
 	"Are you sure you want to delete this item?": "Tem certeza que quer remover esse item?",
