--- a/locales/sv-SE.json
+++ b/locales/sv-SE.json
@@ -84,6 +84,7 @@
   "Password": "Lösenord",
   "Email": "Email",
   "Note": "Anteckning",
+  "Website": "URL",
   "Last Modified": "Senast ändrad",
   "Created": "Skapad",
   "Are you sure you want to delete this item?": "Vill du ta bort det här objektet?",
