--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -84,6 +84,7 @@
   "Password": "Password",
   "Email": "Email",
   "Note": "Note",
+  "Website": "URL",
   "Last Modified": "Last Modified",
   "Created": "Last Modified",
   "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
