--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -40,7 +40,7 @@
     "Uppercase": "Großbuchstaben",
     "I am a new User": "Ich bin neu hier",
     "I am existing User": "Ich habe Swifty bereits genutzt",
-    "Setup Master Password": "Erstelle ein Hauptpasswort",
+    "Setup Master Password": "Erstellen Sie ein Hauptpasswort",
     "Account Setup": "Konto einrichten",
     "Restore Backup": "Sicherungsdatei wiederherstellen",
     "Setup Instructions": "Um Swifty nutzen zu können müssen Sie ein Hauptpasswort festlegen. \n Das ist das einzigste Passwort was Sie sich merken müssen. Bitte gehen Sie sicher dass Sie es nicht vergessen.",
