--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -86,7 +86,7 @@
   "Note": "Note",
   "Website": "URL",
   "Last Modified": "Last Modified",
-  "Created": "Last Modified",
+  "Created": "Created",
   "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
   "Confirm your identity": "Confirm your identity",
   "or": "or",
