Fix Polish language

--- a/locales/pl-PL.json
+++ b/locales/pl-PL.json
@@ -82,7 +82,7 @@
   "Name": "Nazwa",
   "Username": "Nazwa użytkownika",
   "Password": "Hasło",
-  "Email": "E-mail",
+  "Email": "E-Mail",
   "Note": "Notatka",
   "Website": "Strona internetowa",
   "Last Modified": "Zaktualizowano",
